issues/2-fixed gap between drop down on menu buttons

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -89,7 +89,7 @@ button, .button, a.button, a.button:link, a.button:visited, input[type=submit], 
       display:block;
     }
     ul {
-      margin:0.45em 0 0;
+      margin:0.3em 0 0;
       padding:0;
       list-style:none;
       display:none;
